--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimaryAntiga">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#ff6f00</color>
     <color name="colorPrimary2">#0099ff</color>
     <color name="colorPrimary">#0d47a1</color>
+    <color name="backgroundColor">#e3e3e3</color>
 
 </resources>
