--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#ff6f00</color>
     <color name="colorPrimary2">#0099ff</color>
     <color name="colorPrimary">#0d47a1</color>
-    <color name="backgroundColor">#e3e3e3</color>
+    <color name="backgroundColor">#eaeaea</color>
 
 </resources>
