--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,7 +112,7 @@
         android:layout_gravity="right"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        app:srcCompat="@drawable/ic_person_black_24dp" />
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
