--- a/app/src/main/res/drawable/round_background_blue.xml
+++ b/app/src/main/res/drawable/round_background_blue.xml
@@ -3,8 +3,6 @@
     android:shape="rectangle">
 
     <solid android:color="@color/colorPrimary" />
-    <corners
-        android:bottomRightRadius="10dp"
-        android:topRightRadius="10dp" />
+    <corners android:radius="10dp" />
 
 </shape>
